# kernel

./: Cargo.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel-aarch64/: Cargo.toml
kernel-x86_64/: Cargo.toml
kernel-x86_64/src/: acpi.rs  allocator.rs  devices.rs  interrupts.rs  main.rs  memory.rs  panic.rs
kernel-x86_64/src/dev/: mod.rs
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: acpi.rs  allocator.rs  int.rs  interrupt.rs  mem.rs  memory.rs  mod.rs  panic.rs  proc.rs
kernel/src/dev/: acpi_ext.rs  mod.rs  processor.rs  serial_port_ext.rs
kernel/src/fs/: mod.rs
kernel/src/log/: mod.rs
kernel/src/proc/: int.rs  mem.rs  mod.rs
