[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aml = "0.16.1"
acpi = "4.1.0"
uefi = "0.14.0"
spin = "0.9.2"

x86_64 = "0.14.8"
uart_16550 = "0.2.16"
modular-bitfield = "0.11.2"
buddy_system_allocator = "0.8.0"