[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aml = "0.16.1"
acpi = { git = "https://github.com/rust-osdev/acpi" }
uefi = "0.17.0"
spin = "0.9.2"
lolid = { version = "2.0.1", features = ["prng"] }

x86_64 = "0.14.10"
uart_16550 = "0.2.16"
modular-bitfield = "0.11.2"
buddy_system_allocator = "0.8.0"